--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
@@ -21,6 +22,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-multistep": "^5.5.9",
+    "react-redux": "^9.1.0",
+    "timeago-react": "^3.0.6",
     "yup": "^1.3.3"
   },
   "devDependencies": {
