--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.12.0",
     "react-multistep": "^5.5.9",
     "react-redux": "^9.1.0",
+    "socket.io-client": "^4.7.4",
     "timeago-react": "^3.0.6",
     "yup": "^1.3.3"
   },
